--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "developer-portfolio-starter-code",
+  "name": "mj-portfolio-v2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
