feat: next sanity dependency

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.6.0",
     "next": "13.2.4",
+    "next-sanity": "^4.1.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-social-icons": "^5.15.0"
